Day 11: Header: clickable chat button & more Modified: :focus color to primary-color Refactor: chat CSS Refactor: search width animation Modified: reviews quote position on mobile Header: fix spacing on mobile HTML: switched from anchor to button to correct functionality CSS: add onclick feedback

--- a/Projects/Trillo/src/sass/_base.scss
+++ b/Projects/Trillo/src/sass/_base.scss
@@ -43,6 +43,10 @@
 	color: var(--clr-white);
 }
 
+:focus {
+	outline-color: var(--clr-primary);
+}
+
 html {
 	font-size: 62.5%; // 1rem = 10px 10px/16px = 63.5%
 	font-family: "Open Sans", sans-serif;
@@ -60,6 +64,12 @@ h1 {
 
 a {
 	text-decoration: none;
+}
+
+button {
+	font-size: inherit;
+	border: none;
+	background-color: inherit;
 }
 
 body {
