--- a/Projects/Trillo/src/sass/_layout.scss
+++ b/Projects/Trillo/src/sass/_layout.scss
@@ -31,7 +31,6 @@
 
 	@include media(600em) {
 		flex-wrap: wrap;
-		align-content: space-evenly;
 		height: 11rem;
 	}
 }
